# bettingmaster

./: .dockerignore  .env.hetzner.example  .env.laptop.example  .gitignore  CLAUDE.md  Dockerfile.app  Dockerfile.cc-worker  Dockerfile.frontend  GEO-CITABILITY-SCORE.md  HETZNER_BETTINGMASTER_SETUP.md  HETZNER_CC_WORKER_SETUP.md  LAPTOP_SETUP.md  PLAN.md  README.md  SERVER_RUNBOOK.md  alembic.ini  cc_worker.py  docker-compose.hetzner-bettingmaster.yml  docker-compose.hetzner.yml  docker-compose.laptop-worker.yml  docker-compose.laptop.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260412_0001_initial_schema.py  20260422_0002_add_odds_checked_at.py  20260423_0003_add_scrape_runs.py  (+1 more)
data/: team_aliases.json  team_aliases_eu.json
docker/: backend-entrypoint.sh  worker-entrypoint.sh
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
mocks/: BestOddsMatchCard.jsx  Header.jsx  HeroBoard.jsx  OddsTable.jsx  OutcomeBars.jsx  Primitives.jsx  index.html
reference/: _shared.css  brand-backgrounds.html  colors-bookmakers.html  colors-semantic.html  colors_and_type.css  components-buttons.html  components-inputs.html  components-odds-cell.html  components-prob-bars.html
tests/: conftest.py  playwright_odds_check.py  test_api.py  test_bookmaker_validation.py  test_doxxbet_scraper.py  test_fortuna_scraper.py  test_migrations.py  test_nike_scraper.py  test_normalizer.py  test_odds_writer.py  test_on_demand.py  test_polymarket_scraper.py  test_reconciliation.py  test_scheduler.py  test_tipsport_scraper.py
(+76 files in other folders)
