[project]
name = "bettingmaster"
version = "0.1.0"
description = "Slovak odds comparison platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "apscheduler>=3.10,<4",
    "rapidfuzz>=3.9",
    "scrapling",
    "curl-cffi>=0.7",
    "tenacity>=9.0",
    "playwright",
    "psycopg[binary]>=3.2",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
bm = "bettingmaster.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
